--- a/app.json
+++ b/app.json
@@ -2,14 +2,15 @@
   "pages": [
     "pages/latest/latest",
     "pages/hotest/hotest",
+    "pages/article/article",
+    "pages/about/about",
+    "pages/phone/detail",
+    "pages/auth/auth",
+    "pages/lable/lable",
     "pages/wenArticle/wenArticle",
     "pages/librarys/library",
     "pages/authSuccess/authSuccess",
     "pages/empowe/empowe",
-    "pages/article/article",
-    "pages/auth/auth",
-    "pages/phone/detail",
-    "pages/about/about",
     "pages/preview/preview",
     "pages/image/image",
     "pages/authImg/authImg",
